base/prowlarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: ghcr.io/linuxserver/prowlarr:latest
        ports:
        - name: prowlarr
          containerPort: 9696
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          limits:
            memory: 400Mi
          requests:
            memory: 350Mi
        readinessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: prowlarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
        - name: config
          hostPath:
            path: /opt/prowlarr/config
