base/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: NodePort
  ports:
    - port: 9696
      targetPort: http
      nodePort: 30083
      name: http
  selector:
    app: prowlarr
