base/prowlarr/networkpolicy.yaml
---
# Allow external traffic from LB
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-lb-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: LB_IP
    ports:
    - protocol: TCP
      port: 9696
